# fastapi-svelte-template

./: .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierrc  .pylintrc  .style.yapf  README.md  autoformat.sh  cypress.json  index.html  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  rollup.config.js  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  webpack.config.ts
.github/workflows/: deploy.yml
backend/: database_interaction.py
cypress/integration/: sample_spec.js
internal/: error.svelte-b1b5daca.js  layout.svelte-941e843c.js  start-7c7e7639.js
internal/chunks/: vendor-26730352.js
internal/pages/: index.svelte-7ae6d0c4.js
public/: index.css  index.html
src/: App.svelte  App.tsx  Intro.svelte  Something.svelte  app.html
src/components/: About.svelte  Card.tsx  ContextConsumer.tsx  ContextProvider.ts  FunctionalComponentTemplate.tsx  Home.svelte  NormalChat.svelte  TodoPage.svelte  TodoPage.tsx  nav.svelte
src/functions/: my_math.test.ts  my_math.ts
src/pages/: About.svelte  NormalChat.svelte  TodoPage.svelte
src/routes/: __layout.svelte  about.svelte  index.svelte  todo.svelte
src/routes/pages/: NormalChat.svelte
test_backend/: test_stuff.py
test_frontend/: test_e2e.py
