[tool.poetry]
name = "sanic-template"
version = "0.1.0"
description = ""
authors = ["BuRny <gamingburny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.5.3"
fastapi = "^0.65.2"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pre-commit = "^2.13.0"
mypy = "^0.902"
yapf = "^0.31.0"
pylint = "^2.8.3"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
hypothesis = "^6.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
