[tool.poetry]
name = "fastapi-svelte-template"
version = "0.1.0"
description = ""
authors = ["BuRny <gamingburny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.5.3"
fastapi = "^0.65.2"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
aiofiles = "^0.7.0"
dataclasses-json = "^0.5.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
mypy = "^0.902"
yapf = "^0.31.0"
pylint = "^2.8.3"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
hypothesis = "^6.14.0"
seleniumbase = "^1.63.12"
pytest-benchmark = {extras = ["aspect"], version = "^3.4.1"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
